--- a/repo/api.yml
+++ b/repo/api.yml
@@ -4,4 +4,4 @@ api:
     appID: wx31b4a90a892adfe5
     appsecret: 1bbfa515a5ec8129527ef70e7e7ae38a
   url:
-    sendmessage: https://api.weixin.qq.com/cgi-bin/message/custom/send?access_token=${api.property.accesstoken}
+    message: https://api.weixin.qq.com/cgi-bin/message
