--- a/repo/api.yml
+++ b/repo/api.yml
@@ -5,3 +5,4 @@ api:
     appsecret: 1bbfa515a5ec8129527ef70e7e7ae38a
   url:
     message: https://api.weixin.qq.com/cgi-bin/message
+    menu: https://api.weixin.qq.com/cgi-bin/menu
