新增git自动刷新配置

--- a/repo/feign.yml
+++ b/repo/feign.yml
@@ -5,3 +5,9 @@ spring:
     name: feign
   profiles:
     active: dev
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh,health,info
