--- a/repo/feign.yml
+++ b/repo/feign.yml
@@ -10,4 +10,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh,health,info
+        include: refresh,health,info,bus-refresh
